added functionality with associated sites. tests with sk still don't work, idk why
